--- a/cv-course5-main/hough-transform.ipynb
+++ b/cv-course5-main/hough-transform.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
+   "id": "fe6003e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +17,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3d67f907",
    "metadata": {},
    "source": [
     "#### opencvのハフ変換関数：\n",
@@ -30,7 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
+   "id": "b18605a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
+   "id": "dbc6134c",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
+   "id": "afd93f52",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
+   "id": "27a812d4",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
+   "id": "5a27721c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,9 +174,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "1b41dbe3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "287989bd6561406b93915291d003f8c1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=1, description='rho: ', layout=Layout(width='400px'), max=10, min=1), In…"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import Image, display\n",
     "from ipywidgets import widgets\n",
@@ -210,11 +234,19 @@
     "    theta_range=theta_range_slider,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "327ce28e-945e-47af-a961-d5939c150f3c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -228,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
